# rust-compare-files

./: Cargo.toml  README.md
src/: main.rs  utils.rs
