[package]
name = "compare-files"
version = "0.1.0"
edition = "2021"
authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features =  ["derive"] }
color-print = "0.3.5"
ctrlc = "3.4.2"
