[package]
name = "compare-files"
version = "0.1.1"
edition = "2021"
authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]
license = "MIT"
description = "A simple CLI to compare two files and show the differences."
readme = "README.md"
homepage = "https://github.com/rohaquinlop/rust-compare-files"
repository = "https://github.com/rohaquinlop/rust-compare-files"
keywords = ["cli", "compare", "files"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features =  ["derive"] }
color-print = "0.3.5"
ctrlc = "3.4.2"
pluralizer = "0.4.0"
